# obe_toolset

./: CMakeLists.txt  README.md  package.xml
demo/: README.md  demo.php  display.js  style.css  transmit_image.php
include/obe_toolset/: ROI_detection.hpp  Small_ROI_detection.hpp
launch/: competition_start.launch  competition_start.launch.xml  competition_start_regularSize.launch  competition_start_test.launch  image_capture.launch  obe_start.launch.xml  test_ROIs_Dispatcher_Only.launch  test_downlink_reconnection.launch.xml  test_nodes.launch  test_range.launch  test_rig.launch
msg/: ImageAndPose.msg
scripts/: ImageCapture.sh  Recieve_ROIs.py  Send_Dummy_ROIs.py  SetUpDevices.yaml  capture.sh  configure_ROS.bash  copy_iamges_to_new.sh  copy_images_to_new.sh  displayTime.sh  env_loader.sh  groundStation_env_loader.sh  indoor_capture.sh  odroid_env_loader.sh
src/: DispatcherNode.cpp  FakeDispatcherNode.cpp  ProcessorNode.cpp  ROI_detection.cpp  SmallProcessorNode.cpp  Small_ROI_detection.cpp  my_subscriber.cpp
